added GlycoWorkbench model.